--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.5",
-    "@clerk/themes": "^1.7.8",
     "@hookform/resolvers": "^3.3.2",
     "@next/third-parties": "^14.2.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -27,6 +25,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.5",
     "@uploadthing/react": "^5.7.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.6.0",
@@ -45,8 +45,6 @@
     "react-phone-number-input": "^3.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
     "svix": "^1.13.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -55,6 +53,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
